# FineCite

./: README.md  main.py  pyproject.toml
doc/: setup_and_training.md  structure.md
finecite/: train_classification.ipynb  train_classification.py  train_extraction.py  train_extraction_model.ipynb  utils.py
finecite/model/: model.py  trainer.py  utils.py
