[project]
name = "finecite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "bitsandbytes>=0.49.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "transformers>=5.2.0",
]
